# folio

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .mcp.json.example  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE-THIRD-PARTY.md  README.md  SECURITY-EXCEPTIONS.md  clippy.toml  compose.dev.yml  compose.prod.yml  compose.test.yml  deny.toml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  renovate.json  rustfmt.toml
crates/archive/: Cargo.toml  NOTICE
crates/archive/src/: cb7.rs  cbr.rs  cbt.rs  cbt_write.rs  cbz.rs  cbz_write.rs  comic_archive.rs  entry_name.rs  lib.rs
crates/archive/tests/: cbr_fixture.rs  multi_format.rs
crates/entity/: Cargo.toml
crates/entity/src/: app_password.rs  app_setting.rs  audit_log.rs  auth_session.rs  catalog_source.rs  cbl_entry.rs  cbl_list.rs  cbl_refresh_log.rs  character.rs  collection_entry.rs  concept.rs  external_id.rs  field_provenance.rs  imprint.rs  issue.rs  issue_arc.rs  issue_character.rs  issue_concept.rs  issue_cover.rs  issue_credit.rs  issue_genre.rs  issue_location.rs  issue_object.rs  issue_reprint.rs  issue_tag.rs  issue_team.rs  issue_universe.rs  lib.rs  library.rs  library_event.rs  library_health_issue.rs  library_user_access.rs  location.rs  log_widget.rs  marker.rs  metadata_batch.rs  metadata_cache.rs  metadata_match_outcome.rs  metadata_run.rs  metadata_run_candidate.rs  (+32 more)
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20260101_000001_extensions.rs  m20260101_000002_users.rs  m20260101_000003_auth_sessions.rs  m20260101_000004_library_user_access.rs  m20260101_000005_audit_log.rs  m20260201_000001_libraries.rs  m20260201_000002_series_issues.rs  m20260201_000003_progress_placeholder.rs  m20260301_000001_search_docs.rs  m20260507_000001_add_slugs.rs  m20260507_000002_user_language.rs  m20260512_000001_auth_session_id_token_hint.rs  m20260513_000001_app_passwords.rs  m20260513_000002_app_password_scopes.rs  m20260514_000001_app_settings.rs  m20260514_000002_series_volume_uniq.rs  m20260514_000003_cbl_list_cascade_saved_view.rs  m20260514_000004_user_sidebar_entries.rs  m20260515_000001_user_pages.rs  m20260515_000002_sidebar_entries_page_kind.rs  m20260515_000003_user_page_description.rs  m20260515_000004_sidebar_headers_spacers.rs  m20260516_000001_issues_content_hash_idx.rs  m20260518_000001_series_reading_direction.rs  m20260519_000001_drop_orphan_cbl_lists.rs  m20260520_000001_marker_kind_favorite.rs  m20260520_000002_user_default_page_animation.rs  m20260522_000001_progress_records_finished_at.rs  m20260522_000002_log_widgets.rs  m20260601_000001_user_reading_direction.rs  m20260801_000001_scanner_v1.rs  m20260901_000001_user_preferences.rs  m20260902_000001_thumbnail_state.rs  m20260903_000001_thumbnail_settings.rs  m20260904_000001_thumbnail_quality.rs  m20260910_000001_issue_user_edits.rs  m20260920_000001_scan_run_kind.rs  m20261001_000001_reading_sessions.rs  m20261101_000001_default_cover_solo.rs  (+59 more)
crates/parsers/: Cargo.toml
crates/parsers/src/: cbl.rs  comicinfo.rs  filename.rs  lib.rs  metroninfo.rs  series_json.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: app.rs  audit.rs  build_info.rs  config.rs  lib.rs  main.rs  observability.rs  pages.rs  secrets.rs  slug.rs  state.rs
crates/server/src/api/: account.rs  admin_activity.rs  admin_email.rs  admin_fs.rs  admin_logs.rs  admin_metadata.rs  admin_ocr.rs  admin_queue.rs  admin_settings.rs  admin_stats.rs  admin_thumbs.rs  admin_users.rs  app_passwords.rs  appearances.rs  archive_edit.rs  audit.rs  auth_config.rs  cbl_lists.rs  collections.rs  covers.rs  creators.rs  csp.rs  external_ids.rs  extractors.rs  filter_options.rs  form_or_json.rs  health.rs  health_issues.rs  issue_ocr.rs  issue_permalink.rs  issues.rs  komga_compat.rs  libraries.rs  library_events.rs  log_widgets.rs  markers.rs  meta.rs  metadata_search.rs  mod.rs  next_up.rs  (+25 more)
crates/server/src/archive_rewrite/: mod.rs  mutex.rs
crates/server/src/auth/: app_password.rs  bootstrap.rs  cookies.rs  csrf.rs  email_token.rs  extractor.rs  failed_auth.rs  jwt.rs  local.rs  mod.rs  oidc.rs  password.rs  preferences.rs  url_signing.rs  ws_ticket.rs  xff.rs
crates/server/src/cbl/: catalog.rs  import.rs  matcher.rs  mod.rs  refresh.rs
crates/server/src/email/: mod.rs  templates.rs
crates/server/src/jobs/: archive_edit.rs  archive_transforms.rs  backfill.rs  close_dangling_sessions.rs  metadata_apply.rs  metadata_resume.rs  metadata_search.rs  metrics_layer.rs  mod.rs  orphan_sweep.rs  post_scan.rs  prune_auth_sessions.rs  rewrite_sidecars.rs  scan.rs  scan_series.rs  scheduler.rs
crates/server/src/metadata/: apply.rs  auto_split.rs  cache.rs  comicvine.rs  completeness.rs  composite.rs  diff.rs  drift.rs  field.rs  identifier.rs  match_outcome.rs  matcher.rs  merge.rs  metron.rs  mod.rs  orchestrator.rs  phash.rs  provider.rs  range_map.rs  ratcliff.rs  rate_limit.rs  refresh.rs  sidecar_compose.rs  title_norm.rs  writeback_progress.rs  writers.rs
crates/server/src/middleware/: http_metrics.rs  mod.rs  nonce.rs  rate_limit.rs  request_context.rs  security_headers.rs
crates/server/tests/: account.rs  admin_activity.rs  admin_auth_edit.rs  admin_email.rs  admin_fs.rs  admin_logs.rs  admin_metadata.rs  admin_ocr.rs  admin_queue.rs  admin_settings.rs  admin_settings_m4.rs  admin_settings_m5.rs  admin_stats.rs  admin_stats_extended.rs  admin_thumbs.rs  admin_users.rs  app_passwords.rs  archive_edit.rs  archive_edit_api.rs  archive_edit_settings.rs  audit_log_completeness.rs  auth.rs  auth_config.rs  auth_extractor.rs  auth_session_prune.rs  bulk_metadata.rs  cbl_lists.rs  cbl_lists_ssrf.rs  cbl_window_paginated.rs  collections.rs  collections_schema.rs  comicvine_client.rs  creators.rs  fallback_proxy.rs  filter_options.rs  health.rs  health_issues.rs  identity.rs  ignore_globs.rs  issue_ocr.rs  (+100 more)
crates/shared/: Cargo.toml
crates/shared/src/: error.rs  ids.rs  lib.rs  pagination.rs
crates/tools/audit-check/: Cargo.toml  allowlist.txt
(+598 files in other folders)
