[package]
name = "migration"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

[lints]
workspace = true
