[package]
name = "parsers"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
quick-xml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
shared = { path = "../shared" }
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
